--- a/.gitignore
+++ b/.gitignore
@@ -1,98 +1,72 @@
-Chat, eu tenho nesses dois trechos um ponto onde eu indico os dados do banco de dados que eu vou buscar...e eu quero buscar do banco de QA...
+ function applyExceptionAmounts(mongoFees, excRows) {
+   const byCode = excRows.reduce((acc, r) => {
+     (acc[r.FeeCode] ??= []).push(r);
+     return acc;
+   }, {});
 
-Porem na conexao do banco eu só preciso indicar o server...que esta correto com o codigo....no caso do que, no lugar de user e pass esta indicando Windows Authentication
++  /* helper p/ Equity + Option  ───────────── */
++  function mergeEquityOption(rows) {
++    const byId = {};
++    rows.forEach(r => {
++      const id = r.FeeParameterOptionId;
++      (byId[id] ??= {E:null,O:null});
++      if (r.BPSFeeTypeCode === 'E') byId[id].E = r;
++      if (r.BPSFeeTypeCode === 'O') byId[id].O = r;
++    });
++    return Object.values(byId).map(({E,O}) => ({
++      value : (E?.Amount || O?.Amount)?.toString(),
++      text  : `Equity: ${E?.FreqDescription ?? '-'}; Option: ${O?.FreqDescription ?? '-'}`,
++      visible: true, retired: false
++    }));
++  }
 
-E no user desabilitado aparece SNB\DanielG
+   mongoFees.forEach(fee => {
+     const excGrp = findGroup(fee, 'Exception Request');
+     if (!excGrp) return;
 
+     excGrp.fields.forEach(field => {
+       const code = Object.entries(feeCodeMap)
+                          .find(([, c]) => c === field.code)?.[0];
+       let rows = code ? byCode[code] : null;
+       if (!rows?.length) return;
 
-O que eu preciso fazzer nesses codigo para que ele utilize realmente o banco de QA?
+-      /* ordena numéricos primeiro */
+-      const nums  = rows.filter(r => !Number.isNaN(Number(r.Amount)))
+-                        .sort((a,b)=>Number(a.Amount)-Number(b.Amount));
+-      const alpha = rows.filter(r =>  Number.isNaN(Number(r.Amount)))
+-                        .sort((a,b)=>a.Amount.localeCompare(b.Amount));
+-
+-      field.exceptionOptions = [...nums, ...alpha].map(r => ({
+-        value  : r.Amount,
+-        text   : Number.isNaN(Number(r.Amount))
+-                   ? (r.FreqDescription?.trim() || r.Amount)
+-                   : numberToCurrency(Number(r.Amount)),
+-        visible: true,
+-        retired: false
+-      }));
++      /* ---------- Equity / Option (code 7) ---------- */
++      if (field.code === 7) {
++        field.exceptionOptions = mergeEquityOption(rows);
++      } else {
++        /* ordena numéricos primeiro */
++        const nums  = rows.filter(r => !Number.isNaN(Number(r.Amount)))
++                          .sort((a,b)=>Number(a.Amount)-Number(b.Amount));
++        const alpha = rows.filter(r =>  Number.isNaN(Number(r.Amount)))
++                          .sort((a,b)=>a.Amount.localeCompare(b.Amount));
++
++        field.exceptionOptions = [...nums, ...alpha].map(r => ({
++          value  : r.Amount.toString(),
++          text   : Number.isNaN(Number(r.Amount))
++                     ? (r.FreqDescription?.trim() || r.Amount)
++                     : numberToCurrency(Number(r.Amount)),
++          visible: true,
++          retired: false
++        }));
++      }
 
-
-{
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Api",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/src/app/api/index.js",
-      "env": {
-        "NODE_ENV": "Local",
-        "APP_NAME": "snb-fee-management",
-        "CONFIG_SERVER_APP_NAME": "snb-fee-management",
-        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
-        "CONFIG_SERVER_USER": "safraconfigserver",
-        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22",
-        "SERVER_PORT": "3333",
-        "MONGODB_URI": "mongodb://mongodbsnb:rstNze28W6@dash.dev.k8s.safra.int:27017/snb",
-        // "SQLSERVER_SERVER": "nydev01.snb.safra.int",
-        "SQLSERVER_SERVER": "NYQA01",
-        "SQLSERVER_USER": "userFeeMgmtConductor",
-        "SQLSERVER_PASSWORD": "userF33MgmtCond",
-        "SQLSERVER_DATABASE": "FeeMgmt"
-      }
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Worker",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/src/app/worker/index.js",
-      "args": [
-        "relative path inside src/worker/namePathWorker/nameFileWorker.js"
-      ],
-      "env": {
-        "NODE_ENV": "Local",
-        "CONFIG_SERVER_APP_NAME": "config-server-app-name",
-        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
-        "CONFIG_SERVER_USER": "safraconfigserver",
-        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22"
-      }
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Seed",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/src/core/data/seeds/run.js",
-      "env": {
-        "NODE_ENV": "Local"
-      }
-    }
-  ]
-}
-
-NODE_ENV = 'Local'
-APP_NAME = 'snb-fee-management'
-CONFIG_SERVER_APP_NAME = 'snb-fee-management'
-CONFIG_SERVER_URL = 'https://config.dev.k8s.safra.int'
-CONFIG_SERVER_USER = 'safraconfigserver'
-CONFIG_SERVER_PASSWORD = 'Sc$7@gfwertrlM22'
-SERVER_PORT = '3333'
-MONGODB_URI = 'mongodb://mongodbsnb:rstNze28W6@dash.dev.k8s.safra.int:27017/snb'
-# SQLSERVER_SERVER = 'nydev01.snb.safra.int'
-SQLSERVER_SERVER = 'NYQA01'
-SQLSERVER_USER = 'userFeeMgmtConductor'
-SQLSERVER_PASSWORD = 'userF33MgmtCond'
-SQLSERVER_DATABASE = 'FeeMgmt'
-
-
-
-
-CASE_URL= http://casemanagement-backend-http-host.safra-applications-dev
-CONDUCTOR_URL= http://customersearch-backend-http-host.safra-applications-dev
-USER_URL= http://usermanagement-backend-http-host.safra-applications-dev
-FEE_URL= http://feemanagement-backend-http-host.safra-applications-dev
-CONDUCTOR_URL= http://conductor-ui.safra-applications-dev/api/workflow
-JACK_URL= http://jackhenry-backend-http-host.safra-applications-dev
+       field.defaultValue = '';
+       field.labelValue   = '';
+     });
+   });
+ }
 
