--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,42 @@
-function applyExceptionAmounts(mongoFees, excRows) {
-  const byCode = excRows.reduce((acc, r) => {
-    (acc[r.FeeCode] ??= []).push(r);
-    return acc;
-  }, {});
+#addCurrentClientValue(equityField) {
+  const exceptionsOptions = Array.from(this.#allExceptions);
+  for (const [feeGroupIndex, feeGroup] of this.#investiment.feeGroups.entries()) {
+    feeGroup.cif = this.#accounts[0].cifno;
 
-  function mergeEquityOption(rows) {
-    const bucket = {};
-    for (const r of rows) {
-      const code = r.Amount;
-      (bucket[code] ??= { eq: null, op: null });
-      if (r.BPSFeeTypeCode === 'E') bucket[code].eq = r;
-      if (r.BPSFeeTypeCode === 'O') bucket[code].op = r;
-    }
-
-    return Object.keys(bucket)
-      .sort((a, b) => a.localeCompare(b))
-      .map(code => {
-        const { eq, op } = bucket[code];
-        return {
-          value: code,
-          text: `${code} - Equity: ${eq?.FreqDescription || '-'}; Option: ${op?.FreqDescription || '-'}`,
-          visible: true,
-          retired: false,
-        };
-      });
-  }
-
-  mongoFees.forEach(fee => {
-    const excGrp = findGroup(fee, 'Exception Request');
-    if (!excGrp) return;
-
-    excGrp.fields.forEach(field => {
-      const codes = Object.entries(feeCodeMap)
-                          .filter(([, c]) => c === field.code)
-                          .map(([k]) => k);
-      const rows = codes.flatMap(c => byCode[c] || []);
-      if (!rows.length) return;
-
-      if (field.code === 7) {
-        field.exceptionOptions = mergeEquityOption(rows);
+    for (const [fieldIndex, field] of feeGroup.fields.entries()) {
+      if (field.isException) {
+        field.labelValue =
+          this.#investiment.feeGroups[feeGroupIndex - 1].fields[fieldIndex].labelValue;
       } else {
-        const nums = rows.filter(r => !Number.isNaN(Number(r.Amount)))
-                         .sort((a, b) => Number(a.Amount) - Number(b.Amount));
-        const alpha = rows.filter(r => Number.isNaN(Number(r.Amount)))
-                          .sort((a, b) => a.Amount.localeCompare(b.Amount));
-        field.exceptionOptions = [...nums, ...alpha].map(r => ({
-          value: r.Amount,
-          text: r.FreqDescription ? `${r.Amount} - ${r.FreqDescription}` : r.Amount,
-          visible: true,
-          retired: false,
-        }));
+        for (const account of this.#accounts) {
+          if (field.code === account.feeType && feeGroup.accountNumber === account.bpsAcctNumber) {
+            if (field.code === 5) {
+              field.defaultValue = field.isStandard
+                ? field.defaultValue
+                : account.feeAmount.toString();
+              field.labelValue = numberToCurrency(field.defaultValue);
+            } else if (field.code === 7) {
+              const equityRow = exceptionsOptions.find(x => x.value === account.feeCode && x.text.includes('Equity'));
+              if (equityRow) {
+                field.defaultValue = equityRow.value;
+                field.labelValue = equityRow.text;
+              }
+            } else {
+              if (field.labelValue !== 'Other') {
+                if (field.isCurrentClient) {
+                  field.defaultValue = account.feeCode.toString();
+                }
+                let exception = exceptionsOptions.find(x => x.value === field.defaultValue);
+                if (!exception) {
+                  exception = equityField.exceptionOptions.find(e => e.value === field.defaultValue) || { text: '' };
+                }
+                field.labelValue = exception.text;
+              }
+            }
+          }
+        }
       }
-
-      field.defaultValue = '';
-      field.labelValue = '';
-    });
-  });
+    }
+  }
+  this.#clearMemory();
 }
